# okareo-mcp

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  NOTICE  README.md  TRADEMARK.md  pyproject.toml  server.json
docs/: remote-mcp.md  voice-and-analytics.md
src/: analytics.py  error_handling.py  key_registry.py  okareo_client.py  server.py  setup_cli.py  target_redaction.py  voice_augmentation.py
src/auth/: __init__.py  api_key_verifier.py  context.py  dcr_proxy.py  embedded_handoff.py  frontegg_user_info.py  jwks_cache.py  oauth_proxy.py  oauth_state.py  refresh_token_cache.py  security_headers.py  tenant_state.py  throttle.py  verifier.py
src/templates/: analysis_check_prompt.md  basic_scenario.md  boolean_check_prompt.md  check_code.md  custom_endpoint_streaming.md  driver_prompt.md  driver_voice_extension_prompt.md  score_check_prompt.md  target_validate_check_prompt.md  voice_augmentations.md
src/tools/: checks.py  docs.py  insights.py  models.py  scenarios.py  simulations.py  tenants.py  tests.py  voice.py
tests/: conftest.py
tests/integration/: test_container_boot.py  test_cross_tenant_isolation.py  test_embedded_login_flow.py  test_get_target_round_trip.py  test_oauth_proxy_flow.py  test_perf_verifier.py  test_remote_auth_flow.py  test_run_simulation_augmented.py  test_tenant_switching.py  test_throttle_isolation.py
tests/unit/: test_analytics.py  test_checks.py  test_docs.py  test_error_handling.py  test_get_target_inspect.py  test_insights.py  test_instructions.py  test_instrumented_call_tool.py  test_models.py  test_okareo_client.py  test_run_simulation_payload.py  test_scenarios.py  test_simulation_buffering.py  test_simulations.py  test_target_redaction.py  test_tests.py  test_tool_metadata.py  (+2 more)
web/: .eslintrc.json  .gitignore  .yarnrc.yml  next.config.mjs  package.json  playwright.config.ts  postcss.config.cjs  tsconfig.json  vitest.config.ts
(+49 files in other folders)
